src/test/ui/lazy-type-alias-impl-trait/recursion4.stderr
error[E0277]: a value of type `Foo` cannot be built from an iterator over elements of type `_`
  --> $DIR/recursion4.rs:10:9
   |
LL |     x = std::iter::empty().collect();
   |         ^^^^^^^^^^^^^^^^^^ ------- required by a bound introduced by this call
   |         |
   |         value of type `Foo` cannot be built from `std::iter::Iterator<Item=_>`
   |
   = help: the trait `FromIterator<_>` is not implemented for `Foo`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error[E0277]: a value of type `impl Debug` cannot be built from an iterator over elements of type `_`
  --> $DIR/recursion4.rs:19:9
   |
LL |     x = std::iter::empty().collect();
   |         ^^^^^^^^^^^^^^^^^^ ------- required by a bound introduced by this call
   |         |
   |         value of type `impl Debug` cannot be built from `std::iter::Iterator<Item=_>`
   |
   = help: the trait `FromIterator<_>` is not implemented for `impl Debug`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
